--- a/champion-register.html
+++ b/champion-register.html
@@ -378,8 +378,33 @@
         `,
         terms: `
           <h3>Terms & Conditions</h3>
-          <p>Please review our Terms & Conditions which govern your use of the site and services.</p>
-          <p><a href="terms.html" target="_blank" class="text-primary" style="text-decoration: underline;">Open full Terms & Conditions in a new tab</a></p>
+          <p>A Contributor License Agreement (CLA) is a legally binding contract between a contributor and a project or organisation. The following core terms and conditions are commonly found in a comprehensive CLA.</p>
+
+          <h4>Grant of Copyright License</h4>
+          <p>By contributing, you grant the project a perpetual, worldwide, non‑exclusive, royalty‑free, irrevocable copyright license to reproduce, prepare derivative works of, publicly display, publicly perform, and distribute your contributions. The project may sublicense these rights through multiple tiers, allowing the project to use, modify, and distribute your contributions under its chosen licenses.</p>
+
+          <h4>Grant of Patent License</h4>
+          <p>You grant a perpetual, worldwide, non‑exclusive, royalty‑free, irrevocable patent license for any patent claims licensable by you that are necessarily infringed by your contributions. This patent license may terminate if the project or its downstream users bring a patent claim against you.</p>
+
+          <h4>Representations and Warranties</h4>
+          <ul>
+            <li>Each contribution is your original creation, and you have the legal right to grant the licenses above.</li>
+            <li>Your contribution does not include third‑party material unless it is properly licensed and disclosed.</li>
+            <li>If you submit on behalf of an employer or other entity, you have the necessary permissions to do so.</li>
+          </ul>
+
+          <h4>Submission Process</h4>
+          <p>You agree to provide your contact information and, if applicable, information about your employer or entity. You must notify the project of any facts or circumstances that would make the above representations inaccurate.</p>
+
+          <h4>Term and Termination</h4>
+          <p>Upon your acceptance (effective date), the license grants are irrevocable once given. Most provisions—especially license grants—survive termination.</p>
+
+          <h4>Dispute Resolution</h4>
+          <p>The parties agree to attempt informal resolution before litigation. In some cases, the prevailing party may recover reasonable attorneys’ fees.</p>
+
+          <h4>Corporate and Individual Variations</h4>
+          <p><strong>Individual CLA:</strong> You sign as an individual and are personally liable for your representations. If your contribution relates to your work, your employer may need a separate agreement.</p>
+          <p><strong>Corporate CLA:</strong> The entity (not the individual contributor) signs and takes responsibility for contributions from its employees or contractors. The signatory must have authority to bind the entity. Corporate CLAs often cover past, present, and future contributions from the entity’s personnel.</p>
         `
       };
 
